# HuntLens

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ci.yml.save
data/: README.md
data/golden_set/: elb_suspicious.json  encoded_powershell.json  mimikatz.json  netcat.json
docs/: FEATURES.md  README.md  copilot_guide.md  driver_plan.md  ir_case.schema.json  schema.json  threat_model.md
src/huntlens/: README.md  __init__.py  api.py  capability_mapper.py  code_parser.py  dependency_analyzer.py  generator.py  indexer.py  llm_client.py  playbook_builder.py  postprocess.py  prompt_engine.py  readme_parser.py  repo_fetcher.py  retriever.py  schema.py
src/huntlens/integrations/: README.md  edr_crowdstrike.py  greynoise.py  otx.py  sentinel_kql.py  splunk.py  virustotal.py
tests/: README.md  __init__.py  test_capability_mapper.py  test_prompt_engine.py  test_repo_fetcher.py  test_retriever.py  test_schema.py
web/: README.md  next.config.js  package.json  vercel.json
web/components/: PlaybookCard.tsx
web/pages/: index.tsx
web/pages/api/: query.ts
