[project]
name = "huntlens"
version = "0.1.0"
description = "AI SOC Copilot"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "HuntLens Contributors" }
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", "venv", ".venv"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

